changed made in self blog

--- a/styles_myblog.css
+++ b/styles_myblog.css
@@ -1,6 +1,13 @@
 #title {
     text-align: center;
 }
-#title h1{
-    font-size: 4rem;
-}
+/* #title p{
+
+    color:#ffab04;
+} */
+/* .hero-image{
+    width:150vh;
+    height: auto;
+    margin: 20px;
+    border-radius: 2%;
+} */
