--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,12 @@ body, html, p{
     min-height: 80%;
     padding-bottom: 200px;
 }
+
+.hero-img{
+    width: 1000px;
+    padding: 5px;
+    padding-bottom: 30px;
+  }
 @media only screen and (max-device-width: 1366px) {
     .parallax1, .parallax2, .parallax3{
         background-attachment: scroll;
